Fixed layout of games on home page to be aligned

--- a/styles_home.css
+++ b/styles_home.css
@@ -1,79 +1,15 @@
-/* body {
-    margin: 0;
-    font-family: sans-serif;
-}
-
-.main-cont {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 1000px;
-}
-
-.logo-title {
-    display: flex;
-    align-items: center;
-}
-
-.controller {
-    height: 90px;
-}
-
-.nav-cont {
-    background-color: rgb(255,255,255);
-    color: rgb(51, 51, 51);
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 1;
-}
-
-.nav-items {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 50px;
-    width: 70%;
-}
-
-.nav-link {
-    font-weight: bold;
-}
-
-.nav-link:hover {
-    cursor: pointer;
-    font-size: larger;
-}
-
-.nav-items, .game-cont {
-    padding-left: 15%;
-    padding-right: 15%;
-}
-
-.nav-title {
-    font-size: 30px;
-    text-align: center;
-    font-family: monospace;
-}
-
-.separator {
-    margin-top: 0;
-    margin-bottom: 0;
-    border-color: rgb(51, 51, 51);
-    width: 100%;
-} */
-
 .game-cont {
     margin-top: 50px; /* margin  needed to account for sticky navbar */
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    /* align-items: center; */
     flex-wrap: wrap;
     background-color: rgb(241, 241, 241);
-    height: 100%;
+    min-height: 850px;
     padding-top: 25px;
     padding-bottom: 25px;
     gap: 25px;
+    align-content: flex-start;
 }
 
 /* when the screen size reaches 675 px, do the following */
@@ -87,9 +23,10 @@
     }
 }
 
+/* used to place an invisible container to structure/line up the last row */
 .game-cont::after {
     content: "";
-    flex: auto;
+    width: 225px; /* width of game */
 }
 
 .game:hover {
@@ -145,31 +82,3 @@
     text-align: center;
     padding-top: 5px;
 }
-
-
-/*
-footer {
-    text-align: center;
-    padding-bottom: 5px;
-    background-color: rgb(241, 241, 241);
-}
-
-.footer-separator {
-    border-color: rgb(220, 217, 217);
-    background-color: rgb(241, 241, 241);
-    margin-left: 15%;
-    margin-right: 15%;
-    margin-top: 0;
-    margin-bottom: 5px;
-}
-
-.footer-social-cont {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 30px;
-}
-
-.social {
-    height: 30px
-} */
